--- a/0-datamineR-introduction/datamineR-introduction.html
+++ b/0-datamineR-introduction/datamineR-introduction.html
@@ -143,6 +143,11 @@ hr {
 <body>
 <h1>Introduction to dataMineR </h1>
 
+<ul>
+<li>auto-gen TOC:
+{:toc}</li>
+</ul>
+
 <h2>Introduction</h2>
 
 <p>The dataMineR script toolbox aims to be a efficient set of R &amp; knitr scripts, that can be used by experienced and less experience dataminers. The toolbox uses the best of the R community to efficently analayse any arbritray dataset and make a predictive model on the target variable.
